[tool.poetry]
name = "jml_core"
version = "0.1.0"
description = ""
authors = ["dayn9t <dayn9t@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jcx = "*"
loguru = "*"
dataclasses-json = "*"
rustshed = "*"
pydantic = "*"
arrow = "*"
numpy = "*"

srt = "*"
pydub = "*"

pytest = "*"
mypy = "*"
pre-commit = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
